# fty-asset-cli

./: CMakeLists.txt  LICENSE  README.md
json/: filter.json  sample.json
src/: fty-asset-cli.cpp
